--- a/app/src/main/res/layout/activity_inscription.xml
+++ b/app/src/main/res/layout/activity_inscription.xml
@@ -11,7 +11,7 @@
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#8793eb"
+        android:background="#009688"
         android:paddingTop="24dp"
         android:theme="@style/AppTheme.AppBarOverlay"
         app:elevation="0dp">
@@ -33,6 +33,7 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentTop="true"
+                    android:onClick="OpenConnexionPage"
                     android:src="@drawable/ic_keyboard_arrow_left_white_24dp" />
 
             </RelativeLayout>
@@ -46,6 +47,21 @@
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
+
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/lottie_duck"
+            android:layout_width="284dp"
+            android:layout_height="366dp"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.496"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.663"
+            app:lottie_autoPlay="true"
+            app:lottie_rawRes="@raw/duck" />
+
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -58,7 +74,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="121dp"
-                    android:background="#8793eb"
+                    android:background="#009688"
                     android:orientation="vertical">
 
                     <TextView
@@ -76,6 +92,7 @@
                 </LinearLayout>
 
                 <androidx.cardview.widget.CardView
+                    android:id="@+id/card_inscr"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="16dp"
@@ -111,13 +128,13 @@
                             android:textColorHint="#FFB3B3B3">
 
                             <EditText
-                                android:id="@+id/Et_ins_name"
+                                android:id="@+id/et_ins_name"
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
                                 android:drawableStart="@drawable/ic_person_gray_24dp"
                                 android:drawablePadding="14dp"
                                 android:fontFamily="@font/calibri"
-                                android:hint="Username"
+                                android:hint="Nom"
                                 android:inputType="text"
                                 android:maxLines="1"
                                 android:textColor="@android:color/black"
@@ -137,7 +154,7 @@
                                 android:drawableStart="@drawable/ic_person_gray_24dp"
                                 android:drawablePadding="16dp"
                                 android:fontFamily="@font/calibri"
-                                android:hint="Username"
+                                android:hint="Prenom"
                                 android:inputType="text"
                                 android:maxLines="1"
                                 android:textColor="@android:color/black"
@@ -157,8 +174,8 @@
                                 android:drawableStart="@drawable/ic_person_gray_24dp"
                                 android:drawablePadding="16dp"
                                 android:fontFamily="@font/calibri"
-                                android:hint="Username"
-                                android:inputType="text"
+                                android:hint="telephone"
+                                android:inputType="text|phone"
                                 android:maxLines="1"
                                 android:textColor="@android:color/black"
                                 android:textSize="16sp" />
@@ -177,8 +194,8 @@
                                 android:drawableStart="@drawable/ic_person_gray_24dp"
                                 android:drawablePadding="16dp"
                                 android:fontFamily="@font/calibri"
-                                android:hint="Username"
-                                android:inputType="text"
+                                android:hint="email"
+                                android:inputType="text|textEmailAddress"
                                 android:maxLines="1"
                                 android:textColor="@android:color/black"
                                 android:textSize="16sp" />
@@ -211,7 +228,7 @@
 
 
                 <Button
-                    android:id="@+id/login"
+                    android:id="@+id/insc_save"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
