liste statique des produits à l'accueil * ajout des images des matériaux

--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -26,7 +26,8 @@
                 android:layout_height="24dp"
                 android:layout_centerInParent="true"
                 android:background="@drawable/ic_baseline_arrow_back_white"
-                android:backgroundTint="#050505" />
+                android:backgroundTint="#050505"
+                android:onClick="retouraccueil" />
 
         </RelativeLayout>
 
@@ -34,14 +35,14 @@
             android:id="@+id/cart_list"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
+            android:layout_centerInParent="true"
             android:ellipsize="end"
+            android:fontFamily="@font/googlesans_medium"
             android:lines="1"
             android:maxLength="15"
             android:text="@string/cart_list"
             android:textColor="@color/colorTitle"
-            android:textSize="16dp"
+            android:textSize="20sp"
             android:textStyle="bold" />
 
     </RelativeLayout>
@@ -194,7 +195,7 @@
                     android:ellipsize="end"
                     android:lines="1"
                     android:text="@string/payment"
-                    android:textColor="@color/colorWhite"
+                    android:textColor="@color/white"
                     android:textSize="15dp"
                     android:textStyle="bold" />
 
