--- a/app/src/main/res/menu/item_menu.xml
+++ b/app/src/main/res/menu/item_menu.xml
@@ -1,22 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
-    <item android:id="@+id/nav_home"
-        android:title="Home"
-        android:icon="@drawable/ic_home"/>
+    <item
+        android:id="@+id/nav_home"
+        android:icon="@drawable/ic_home"
+        android:title="Home" />
 
-     <item android:id="@+id/nav_explore"
-        android:title="Tous les produits"
-        android:icon="@drawable/ic_baseline_explore"/>
+    <item
+        android:id="@+id/nav_explore"
+        android:icon="@drawable/ic_baseline_explore"
+        android:title="Tous les produits" />
 
-     <item android:id="@+id/nav_like"
-        android:title="Favoris"
-        android:icon="@drawable/ic_favorite"/>
+    <item
+        android:id="@+id/nav_like"
+        android:icon="@drawable/ic_favorite"
+        android:title="Favoris" />
 
-     <item android:id="@+id/nav_account"
-        android:title="Mon Compte"
-        android:icon="@drawable/ic_account_circle"/>
+
+    <item
+        android:id="@+id/nav_panier"
+        android:icon="@drawable/ic_shopping"
+        android:title="Panier" />
+
+
+
+<!--    <item-->
+<!--        android:id="@+id/nav_account"-->
+<!--        android:icon="@drawable/ic_account_circle"-->
+<!--        android:title="Mon Compte" />-->
+
+
 
 
 </menu>
