--- a/app/src/main/res/layout/activity_main5.xml
+++ b/app/src/main/res/layout/activity_main5.xml
@@ -23,16 +23,17 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/favorite_img_4" />
+                    android:src="@drawable/carreaux" />
 
                 <ImageView
+                    android:id="@+id/backMain5"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentTop="true"
                     android:layout_marginTop="16dp"
                     android:padding="8dp"
-                    android:src="@drawable/ic_keyboard_arrow_left_white_24dp" />
+                    android:src="@drawable/ic_baseline_arrow_back" />
 
                 <ImageView
                     android:layout_width="32dp"
@@ -66,7 +67,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="4dp"
                             android:fontFamily="@font/calibri"
-                            android:text="Cactus"
+                            android:text="@string/carreaux"
                             android:textColor="#000000"
                             android:textSize="24sp" />
 
@@ -74,7 +75,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/calibri"
-                            android:text="S19"
+                            android:text="1200"
                             android:textColor="#8e8ef6"
                             android:textSize="16sp"
                             android:textStyle="bold" />
@@ -98,7 +99,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="4dp"
                             android:fontFamily="@font/calibri"
-                            android:text="Wildan Shop"
+                            android:text="Avis"
                             android:textSize="16sp" />
 
                         <ImageView
@@ -125,18 +126,19 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/calibri"
                 android:padding="16dp"
-                android:text="in addition to being a decoration, cactus can also be a health benefit, let's buy cactus in our store because now discount 30%"
+                android:text="La pose est gratuite pour un achat supérieur à 50 m2"
                 android:textColor="#444444"
                 android:textSize="16sp" />
 
             <Button
+                android:id="@+id/btn_acheter_details"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_margin="16dp"
                 android:background="@drawable/buttonshape"
                 android:fontFamily="@font/calibri"
-                android:text="Buy Now"
+                android:text="Acheter"
                 android:textAllCaps="false"
                 android:textColor="#ffffff"
                 android:textSize="24sp" />
